...
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agree">I\’ve read and agree to the</string>
    <string name="privacyPolicyLink">terms of privacy policy</string>
    <string name="register">REGISTER</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="loginText">LOGIN◀</string>

    <!-- Login Activity -->
    <string name="login">Log in</string>
    <string name="loginButton">LOGIN</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerText">REGISTER◀</string>
    <string name="invalidEmail">Please enter a valid email address</string>
    <string name="emptyPassword">The password cannot be empty</string>

    <!-- Goals Activity -->
    <string name="goalsTitle">Goals</string>
    <string name="level_text">Level</string>
    <string name ="exp">EXP</string>
    <string name="create_new">Create New</string>
    <string name="goals_progress_text">Goals and Progress</string>
    <string name="goal_desc">Goal description</string>
    <string name="goal_date">Date</string>
    <string name="goal_exp">Goal EXP</string>
    <string name="goal_exp_format">+%1$d EXP</string>

    <!-- OnBoarding Activity -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome to</string>
    <string name="tagline">Manage expenses, set goals, and track progress!</string>
    <string name="title1">Take hold of your finances</string>
    <string name="onboarding1">Stay on top by effortlessly tracking your subscriptions &amp; bills</string>
    <string name="title2">Set and achieve financial goals</string>
    <string name="onboarding2">Set your financial goals and track progress</string>
...
