<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goals_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background">
    <fragment
        android:id="@+id/side_menu_fragment"
        android:name="com.personal_finance_app.SideMenuFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/goals_layout"
        app:layout_constraintTop_toTopOf="@id/goals_layout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />
    <!-- Profile Fragment container -->
    <FrameLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/user_profile_fragment"
        android:name="com.personal_finance_app.UserProfileFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/side_menu_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/goals_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/retro_font"
        android:text="@string/goals_progress_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/add_goal_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_fragment"
        android:layout_marginTop="24dp" />
    <Button
        android:id="@+id/add_goal_button"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/retro_font"
        android:text="@string/create_new"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goals_title"
        app:layout_constraintTop_toBottomOf="@id/user_profile_fragment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_goal_button" />

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#AFF9FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        app:backgroundTint="@color/teal_200"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="@id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
