...
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="45sp"/>

    <!-- Email Address Field -->
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:autofillHints="email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
...
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLogin"
        android:autofillHints="password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
...
