<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/menu_insights"
        android:icon="@drawable/ic_insights"
        android:title="@string/title_insights" />

    <item
        android:id="@+id/menu_placeholder"
        android:title=""
        android:icon="@drawable/ic_blank"/>

    <item
        android:id="@+id/menu_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/goalsTitle" />

    <item
        android:id="@+id/menu_milestones"
        android:icon="@drawable/ic_milestones"
        android:title="@string/title_milestones" />

</menu>